[FE][feat] #107 : index.html에 네이버 지도 API 셋팅 코드 추가

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <div id="root"></div>
+	  <!--
+	    네이버 지도 API의 현재 옵션
+	    - ncpClientId: 네이버 클라우드 플랫폼에서 발급받은 Client ID
+	    - submodules: 사용할 서브모듈
+	    - callback: 콜백 함수
+	   -->
+	  <script type="text/javascript" src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=m5sz5l3xvw&submodules=geocoder&callback=CALLBACK_FUNCTION"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
